[gd_scene load_steps=39 format=2]

[ext_resource path="res://src/main/world/overworld-buttons.gd" type="Script" id=1]
[ext_resource path="res://src/main/ui/menu/theme/h4.theme" type="Theme" id=2]
[ext_resource path="res://src/main/ui/overworld-ui.gd" type="Script" id=3]
[ext_resource path="res://src/main/ui/SceneTransitionCover.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/main/ui/CheatCodeDetector.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/main/ui/level-select/LevelSelectPanel.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/main/world/OverworldTouchButtons.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/main/ui/ButtonShortcutHelper.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/main/ui/settings/SettingsMenu.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/main/ui/MusicPopup.tscn" type="PackedScene" id=16]
[ext_resource path="res://src/main/ui/ImageButton.tscn" type="PackedScene" id=17]
[ext_resource path="res://src/main/ui/chat/ChatUi.tscn" type="PackedScene" id=18]
[ext_resource path="res://src/main/ui/FpsLabel.tscn" type="PackedScene" id=19]
[ext_resource path="res://src/main/ui/VersionLabel.tscn" type="PackedScene" id=20]
[ext_resource path="res://src/main/ui/MoneyLabel.tscn" type="PackedScene" id=21]
[ext_resource path="res://assets/main/ui/touch/interact-pressed.png" type="Texture" id=22]
[ext_resource path="res://assets/main/ui/touch/interact.png" type="Texture" id=23]
[ext_resource path="res://assets/main/ui/touch/menu-pressed.png" type="Texture" id=24]
[ext_resource path="res://assets/main/ui/touch/menu.png" type="Texture" id=25]
[ext_resource path="res://src/main/world/phone-menu.gd" type="Script" id=28]
[ext_resource path="res://assets/main/ui/touch/phone.png" type="Texture" id=33]
[ext_resource path="res://assets/main/ui/touch/phone-pressed.png" type="Texture" id=34]
[ext_resource path="res://assets/main/ui/touch/close.png" type="Texture" id=35]
[ext_resource path="res://assets/main/ui/touch/close-pressed.png" type="Texture" id=36]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="InputEventAction" id=6]
action = "phone"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="InputEventAction" id=8]
action = "ui_cancel"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="InputEventAction" id=10]
action = "interact"

[sub_resource type="ShortCut" id=11]
shortcut = SubResource( 10 )

[sub_resource type="StyleBoxFlat" id=12]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.1, 0.094, 0.094, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="InputEventAction" id=13]
action = "ui_cancel"

[sub_resource type="ShortCut" id=14]
shortcut = SubResource( 13 )

[node name="OverworldUi" type="CanvasLayer" groups=["overworld_ui"]]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Labels" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoutheastLabels" type="VBoxContainer" parent="Control/Labels"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -502.0
margin_top = -290.0
margin_right = -10.0
margin_bottom = -10.0
mouse_filter = 2
theme = ExtResource( 2 )
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FpsLabel" parent="Control/Labels/SoutheastLabels" instance=ExtResource( 19 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 236.0
margin_right = 492.0
margin_bottom = 256.0

[node name="VersionLabel" parent="Control/Labels/SoutheastLabels" instance=ExtResource( 20 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 260.0
margin_right = 492.0
margin_bottom = 280.0

[node name="NorthwestLabels" type="VBoxContainer" parent="Control/Labels"]
margin_left = 10.0
margin_top = 10.0
margin_right = 512.0
margin_bottom = 300.0
mouse_filter = 2
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyLabel" parent="Control/Labels/NorthwestLabels" instance=ExtResource( 21 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 502.0
margin_bottom = 32.0
compact = true

[node name="ChatUi" parent="Control" instance=ExtResource( 18 )]
visible = false
margin_bottom = 1.99976

[node name="TouchButtons" parent="Control" instance=ExtResource( 12 )]

[node name="Buttons" type="Control" parent="Control"]
modulate = Color( 1, 1, 1, 0.627451 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Northeast" type="HBoxContainer" parent="Control/Buttons"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -512.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 110.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
custom_constants/separation = 10
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PhoneButton" parent="Control/Buttons/Northeast" instance=ExtResource( 17 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 292.0
margin_right = 392.0
margin_bottom = 100.0
focus_mode = 0
size_flags_horizontal = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
shortcut = SubResource( 7 )
icon = ExtResource( 33 )
expand_icon = true
normal_icon = ExtResource( 33 )
pressed_icon = ExtResource( 34 )

[node name="SettingsButton" parent="Control/Buttons/Northeast" instance=ExtResource( 17 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 402.0
margin_right = 502.0
margin_bottom = 100.0
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
shortcut = SubResource( 9 )
icon = ExtResource( 25 )
expand_icon = true
normal_icon = ExtResource( 25 )
pressed_icon = ExtResource( 24 )

[node name="Southeast" type="HBoxContainer" parent="Control/Buttons"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -160.0
margin_right = -10.0
margin_bottom = -60.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
custom_constants/separation = 10
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TalkButton" parent="Control/Buttons/Southeast" instance=ExtResource( 17 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 402.0
margin_right = 502.0
margin_bottom = 100.0
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
shortcut = SubResource( 11 )
icon = ExtResource( 23 )
expand_icon = true
normal_icon = ExtResource( 23 )
pressed_icon = ExtResource( 22 )

[node name="CheatCodeDetector" parent="Control" instance=ExtResource( 10 )]
codes = [ "bigfps" ]

[node name="SettingsMenu" parent="Control" instance=ExtResource( 14 )]
quit_type = 1

[node name="CellPhoneMenu" type="CanvasLayer" parent="Control"]
script = ExtResource( 28 )

[node name="Bg" type="ColorRect" parent="Control/CellPhoneMenu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.752941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelect" parent="Control/CellPhoneMenu" instance=ExtResource( 11 )]
visible = false
custom_styles/panel = SubResource( 12 )

[node name="Buttons" type="Control" parent="Control/CellPhoneMenu"]
visible = false
modulate = Color( 1, 1, 1, 0.627451 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Northeast" type="HBoxContainer" parent="Control/CellPhoneMenu/Buttons"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -512.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 110.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
custom_constants/separation = 10
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="Control/CellPhoneMenu/Buttons/Northeast" instance=ExtResource( 17 )]
margin_left = 292.0
margin_right = 392.0
margin_bottom = 100.0
size_flags_horizontal = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
shortcut = SubResource( 14 )
icon = ExtResource( 35 )
expand_icon = true
normal_icon = ExtResource( 35 )
pressed_icon = ExtResource( 36 )

[node name="ShortcutHelper" parent="Control/CellPhoneMenu/Buttons/Northeast/BackButton" instance=ExtResource( 13 )]
action = "phone"

[node name="Spacer" parent="Control/CellPhoneMenu/Buttons/Northeast" instance=ExtResource( 17 )]
margin_left = 402.0
margin_right = 502.0
margin_bottom = 100.0
mouse_filter = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
disabled = true

[node name="MusicPopup" parent="Control" instance=ExtResource( 16 )]
mouse_filter = 2

[node name="SceneTransitionCover" parent="Control" instance=ExtResource( 4 )]

[connection signal="pressed" from="Control/Buttons/Northeast/PhoneButton" to="." method="_on_CellPhoneButton_pressed"]
[connection signal="pressed" from="Control/Buttons/Northeast/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Control/Buttons/Southeast/TalkButton" to="." method="_on_TalkButton_pressed"]
[connection signal="hide" from="Control/CellPhoneMenu" to="." method="_on_CellPhoneMenu_hide"]
[connection signal="hide" from="Control/CellPhoneMenu" to="Control/Buttons" method="_on_Menu_hide"]
[connection signal="hide" from="Control/CellPhoneMenu" to="Control/TouchButtons" method="_on_Menu_hide"]
[connection signal="show" from="Control/CellPhoneMenu" to="." method="_on_CellPhoneMenu_show"]
[connection signal="show" from="Control/CellPhoneMenu" to="Control/Buttons" method="_on_Menu_show"]
[connection signal="show" from="Control/CellPhoneMenu" to="Control/TouchButtons" method="_on_Menu_show"]
[connection signal="pressed" from="Control/CellPhoneMenu/Buttons/Northeast/BackButton" to="Control/CellPhoneMenu" method="_on_BackButton_pressed"]
[connection signal="chat_choice_chosen" from="Control/ChatUi" to="." method="_on_ChatUi_chat_choice_chosen"]
[connection signal="chat_event_played" from="Control/ChatUi" to="." method="_on_ChatUi_chat_event_played"]
[connection signal="chat_finished" from="Control/ChatUi" to="." method="_on_ChatUi_chat_finished"]
[connection signal="showed_choices" from="Control/ChatUi" to="." method="_on_ChatUi_showed_choices"]
[connection signal="cheat_detected" from="Control/CheatCodeDetector" to="Control/Labels/SoutheastLabels/FpsLabel" method="_on_CheatCodeDetector_cheat_detected"]
[connection signal="hide" from="Control/SettingsMenu" to="." method="_on_SettingsMenu_hide"]
[connection signal="hide" from="Control/SettingsMenu" to="Control/Buttons" method="_on_Menu_hide"]
[connection signal="hide" from="Control/SettingsMenu" to="Control/TouchButtons" method="_on_Menu_hide"]
[connection signal="quit_pressed" from="Control/SettingsMenu" to="." method="_on_SettingsMenu_quit_pressed"]
[connection signal="show" from="Control/SettingsMenu" to="." method="_on_SettingsMenu_show"]
[connection signal="show" from="Control/SettingsMenu" to="Control/Buttons" method="_on_Menu_show"]
[connection signal="show" from="Control/SettingsMenu" to="Control/TouchButtons" method="_on_Menu_show"]
